vlib/v/checker/tests/unknown_struct_name.vv
module main

fn main() {
	_ := F{}
}
